--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,5 @@
+__pycache__/
 output/
-venv/
-temp/
-.rpa/
-.idea/
-.ipynb_checkpoints/
-*/.ipynb_checkpoints/*
-.virtual_documents/
-*/.virtual_documents/*
-.vscode
-.DS_Store
 *.pyc
-*.zip
-*/work-items-out/*
-testrun/*
-.~lock*
-*.pkl
+.vscode/
+.env
